<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Wallet</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log">Log In</string>
    <string name="title_activity_signin">Sign In</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_loan_manager">LoanManager</string>
    <string name="title_activity_loan_list_view">LoanListView</string>

</resources>
