<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.coderchef.mywallet.SignupActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1"
        android:paddingLeft="50px"
        android:paddingTop="180px">

        <ImageView
            android:layout_width="80px"
            android:layout_height="80px"
            android:background="@drawable/email"
            android:id="@+id/imageView" />

        <EditText
            android:layout_width="70dp"
            android:layout_height="80px"
            android:hint="@string/email"
            android:layout_weight="0.80"
            android:id="@+id/userEmail" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1"
        android:paddingLeft="50px"
        android:paddingTop="270px">

        <ImageView
            android:layout_width="80px"
            android:layout_height="80px"
            android:background="@drawable/user"
            android:id="@+id/imageView2" />

        <EditText
            android:layout_width="70dp"
            android:layout_height="80px"
            android:hint="@string/username"
            android:layout_weight="0.80"
            android:id="@+id/userName" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1"
        android:paddingLeft="50px"
        android:paddingTop="360px"
        android:id="@+id/userPassLayOut">

        <ImageView
            android:layout_width="80px"
            android:layout_height="80px"
            android:background="@drawable/password"
            android:id="@+id/imageView3" />

        <EditText
            android:layout_width="70dp"
            android:layout_height="80px"
            android:inputType="textPassword"
            android:layout_weight="0.80"
            android:hint="@string/password"
            android:id="@+id/userPassword" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1"
        android:paddingLeft="360px"
        android:paddingTop="480px">

        <Button
            android:layout_width="250px"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:background="@color/blue"
            android:id="@+id/submitBtn" />
    </LinearLayout>
</RelativeLayout>
